Profile page minor layout bug fixes.

--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -79,10 +79,6 @@
 
                 display: flex;
 
-                border-radius: 100%;
-
-                overflow: hidden;
-
                 img {
                     width: $size;
                     height: $size;
